@@ -33,8 +33,10 @@ WHAT IS NEW?
     * Really fixed the "script arguments overflow into local variables" bug.
       You need to recompile your scripts to get this fix [Ralph Versteegen]
     * Fixed bug 163, a random crash in the music import screen. [Simon, Mike]
-    * Bug 179: keyispressed did not always return true, being very noticable
-      when two conditions used in an if statement [Ralph Versteegen]
+    * Bug 179: "Use of two keyispressed conditions in an if statement causes
+      massive weirdness" - "keyispressed" command has been changed so that it
+      now only returns a bool. It may help to recompile your scripts. If you
+      want the old behaviour, use the new "keyval" command [Ralph]
     * Joystick didn't work at all in the Windows version [Mike]
     * "NPC X","NPC Y" and "NPC at spot" behaviour has been corrected: an
       NPC's position is now the tile its top left corner stands on [Ralph]
@@ -46,6 +48,7 @@ WHAT IS NEW?
     * "set [days/hours/minutes/seconds] of play", "get seconds of play" [Mike
       Caron]
     * "npc extra", "set npc extra" [Mike Caron]
+    * "keyval"
 
   * Stuff only Developers Will Notice
     * Some rewritten map wrapping code [Ralph Versteegen]
